--- a/Prueba.css
+++ b/Prueba.css
@@ -1,3 +1,77 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+}
+
+body {
+    background-color: #fff59d;
+}
+
+.header {
+    background-color: rgba(179, 87, 255, 0.404);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 85px;
+    padding: 5px 10%;
+}
+
+.header .logo {
+    cursor: pointer;
+    margin-right: auto;
+}
+
+.header .logo img {
+    height: 70px;
+    width: auto;
+    transition: all 0.3s;
+}
+
+.header .logo img:hover {
+    transform: scale(1.2);
+}
+
+.header .nav-links {
+    list-style: none;
+}
+
+.header .nav-links li {
+    display: inline-block;
+    padding: 0 20px;
+}
+
+.header .nav-links li:hover {
+    transform: scale(1.1);
+}
+
+.header .nav-links a {
+    font-size: 700;
+    color: #1b3039;
+    text-decoration: none;
+}
+
+.header .nav-links li a:hover {
+    color: #9700fc
+}
+.header .boton button{
+    margin-left: 20px;
+    font-weight: 700;
+    color: #9a59cf;
+    padding: 9px 25px;
+    background: #eceff1;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3 ease 0s;
+}
+.header .boton button:hover{
+    background-color: #e2f1f8;
+    color: #7406ce;
+    transform: scale(1.1);
+}
 .titulo {
     display: flex;
     justify-content: center;
