--- a/Prueba.css
+++ b/Prueba.css
@@ -79,3 +79,10 @@ body {
     justify-content: center;
     align-items: center;
 }
+.info {
+    margin-left: 15%;
+    margin-right: 15%;
+    text-align: justify;
+    font-size: 25px;
+    margin-bottom: 5%;
+}
