--- a/Style.css
+++ b/Style.css
@@ -5,22 +5,21 @@
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
 }
-
- .header {
-    background-color: rgb(138, 0, 252);
-    display: flex;
-    justify-content: flex-end;
-    align-items: stretch;
-    height: 75px;
-    padding: 20px 3%
- }
+.header {
+      background-color: rgb(123, 10, 252);
+      display: flex;
+      justify-content: flex-end;
+      align-items: stretch;
+      height: 75px;
+      padding: 20px 3%
+   }   
 
  .header .boton button{
     margin-left: 20px;
     font-weight: 700;
     color: #ffffff;
     padding: 10px 20px;
-    background: #b16cff;
+    background: #b65dff;
     border: none;
     border-radius: 90px;
     cursor: pointer;
