--- a/Style.css
+++ b/Style.css
@@ -25,7 +25,7 @@
     cursor: pointer;
     transition: all 0.3 ease 0s;
  }
- .contenedor-colummas {
+ .container {
    width: 100%;
    margin: auto;
    margin-bottom: 50px;
